--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 * {
+	font-family: 'Indie Flower';
 }
 
 body {
-	background-image: url("img/batik1.jpg");
+	background: url("img/background1.jpg") no-repeat top center;
+	background-size: cover;
+	background-attachment: fixed;
 	margin: 0;
 	padding: 0;
 }
@@ -21,71 +24,74 @@ header {
 }
 
 h1 {
-	font-size: 35px;
+	font-size: 300%;
+	text-align: left;
+	color: black;
+}
+
+#daytitle {
 	text-align: center;
-	color: rgb(72, 75, 94);
 }
 
-section {
+#week1 {
+	text-align: center;
+	font-size: 500%;
 }
 
-.kids li {
+.day1 {
 	position: relative;
-	list-style: none;
-	margin-left: 50px;
-	margin-right: 50px;
-	left: 5%;
-	display: inline;
-	top: 10px;
+	left: 10%;
+	width: 25%;
+	height: 70%;
+	background-color: white;
+	text-align: center;	
 }
 
-.kids {
+.day2 {
 	position: relative;
+	left: 10%;
+	width: 25%;
+	height: 70%;
+	background-color: white;
+	text-align: center;	
 }
 
-.teenagers li {
+.day3 {
 	position: relative;
-	list-style: none;
-	margin-left: 50px;
-	margin-right: 50px;
-	left: 5%;
-	display: inline;
-	top: 10px;
+	left: 10%;
+	width: 25%;
+	height: 70%;
+	background-color: white;
+	text-align: center;	
 }
 
-.teenagers {
+.day4 {
 	position: relative;
-	top: 60px;
+	top: 100px;
+	left: 20%;
+	width: 25%;
+	height: 70%;
+	background-color: white;
+	text-align: center;	
 }
 
-.adult li {
+.day5 {
 	position: relative;
-	list-style: none;
-	margin-left: 50px;
-	margin-right: 50px;
-	left: 5%;
-	display: inline;
-	top: 10px;
+	top: 100px;
+	left: 20%;
+	width: 25%;
+	height: 70%;
+	background-color: white;
+	text-align: center;	
 }
 
-.adult {
-	position: relative;
-	top: 120px;
+section div {
+	font-weight: bold;
+	color: black;
+	display: inline-block;
 }
 
-.old li {
-	position: relative;
-	list-style: none;
-	margin-left: 50px;
-	margin-right: 50px;
-	left: 5%;
-	display: inline;
-}
 
-.old {
-	position: relative;
-	top: 180px;
-}
 
 #logo {
 	position: absolute;
@@ -131,7 +137,12 @@ footer {
 	right: 0;
 	left: 0;
 	width: 100%;
-	height: 40px;
+	height: 80%;
+	background: url("img/self.jpg") no-repeat top center;
+	background-size: cover;
+	background-attachment: fixed;
+	text-align: left;
+	font-weight: bold;
 }
 
 h3 {
@@ -145,6 +156,5 @@ h5 {
 	margin: 0;
 	margin-right: 10px;
 	padding: 0;
-	text-align: right;
 	top: 10px;
 }
