--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ h1 {
 	position: relative;
 	left: 10%;
 	width: 25%;
-	height: 70%;
+	height: auto;
 	background-color: white;
 	text-align: center;	
 }
@@ -51,7 +51,7 @@ h1 {
 	position: relative;
 	left: 10%;
 	width: 25%;
-	height: 70%;
+	height: auto;
 	background-color: white;
 	text-align: center;	
 }
@@ -60,7 +60,7 @@ h1 {
 	position: relative;
 	left: 10%;
 	width: 25%;
-	height: 70%;
+	height: auto;
 	background-color: white;
 	text-align: center;	
 }
@@ -70,7 +70,7 @@ h1 {
 	top: 100px;
 	left: 20%;
 	width: 25%;
-	height: 70%;
+	height: auto;
 	background-color: white;
 	text-align: center;	
 }
@@ -80,7 +80,7 @@ h1 {
 	top: 100px;
 	left: 20%;
 	width: 25%;
-	height: 70%;
+	height: auto;
 	background-color: white;
 	text-align: center;	
 }
