--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body {
 	background: url("img/background1.jpg") no-repeat top center;
 	background-size: cover;
 	background-attachment: fixed;
+	/*filter: 100%;
+    -webkit-filter: grayscale(100%); Safari 6.0 - 9.0*/ 
 	margin: 0;
 	padding: 0;
 }
@@ -38,6 +40,8 @@ h1 {
 	font-size: 500%;
 	margin-bottom: 20px;
 	color: Tomato;
+	/*-webkit-filter: blur(1px);
+	-webkit-filter: brightness(70%);*/ 
 }
 
 #week2, #week3, #week4, #week5, #week6 {
@@ -46,6 +50,7 @@ h1 {
 	margin-top: 150px;
 	margin-bottom: 20px;
 	color: Tomato;
+	/*-webkit-filter: brightness(70%);*/
 }
 
 .day1 {
